<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"	android:layout_width="match_parent" android:layout_height="match_parent"	android:layout_marginBottom="40dp"	android:background="#F7F7F7">	<ScrollView android:id="@+id/knowledge_transfer_sv"		android:layout_width="wrap_content"		android:layout_height="match_parent">		<RelativeLayout android:id="@+id/content_container"			android:layout_width="wrap_content"			android:layout_height="match_parent">			<RelativeLayout android:id="@+id/frame_1_knowledge_transfer"				android:layout_width="wrap_content"				android:layout_height="match_parent"				>				<View android:id="@+id/background"					android:background="@drawable/background_shape"					 android:layout_marginStart="0dp"					android:layout_marginTop="0dp"					android:layout_width="match_parent"					android:layout_height="match_parent" />				<RelativeLayout android:id="@+id/top_bar"					android:layout_marginTop="0dp"					android:layout_marginStart="0dp"					android:layout_width="wrap_content"					android:layout_height="wrap_content"					android:background="#FFFFFF"					>					<View android:id="@+id/background_"						android:background="@drawable/background__shape"						 android:layout_marginStart="0dp"						android:layout_marginTop="0dp"						android:layout_width="match_parent"						android:layout_height="103dp" />					<TextView android:id="@+id/knowledge_transfer"						android:fontFamily="OpenSans-Bold"						android:textSize="25sp"						android:textColor="@color/knowledge_transfer_color"						android:layout_marginStart="685dp"						android:layout_marginTop="42dp"						android:layout_width="255dp"						android:layout_height="38dp"						android:text="@string/knowledge_transfer_string"						 />					<TextView android:id="@+id/programme"						android:fontFamily="OpenSans-Bold"						android:textAllCaps="true"						android:textSize="33sp"						android:textColor="@color/programme_color"						android:layout_marginStart="464dp"						android:layout_marginTop="36dp"						android:layout_width="230dp"						android:layout_height="43dp"						android:text="@string/programme_string"						 />				</RelativeLayout>				<TextView android:id="@+id/content"					android:background="#F7F7F7"					android:fontFamily="OpenSans-SemiBold"					android:textSize="25sp"					android:textColor="@color/content_color"					android:paddingStart="30dp"					android:paddingTop="20dp"					android:layout_width="2766dp"					android:layout_height="match_parent"					android:text="@string/content_string"					android:layout_below="@id/top_bar"					 />				<ImageView android:id="@+id/back_icon"					android:src="@drawable/back_icon"					android:contentDescription="@string/ek_img_content"					 android:layout_marginStart="36dp"					android:layout_marginTop="24dp"					android:layout_width="41dp"					android:layout_height="41dp" />			</RelativeLayout>		</RelativeLayout>	</ScrollView></RelativeLayout>