<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"	android:layout_width="match_parent" android:layout_height="wrap_content"	android:background="#FFFFFF"	android:layout_marginBottom="30dp" >	<RelativeLayout android:id="@+id/Phase"		android:layout_width="wrap_content" 		android:layout_height="match_parent"		android:background="#FFFFFF">		<RelativeLayout android:id="@+id/content_container" 			android:layout_width="wrap_content" 			android:layout_height="wrap_content" >			<RelativeLayout android:id="@+id/frame_7_phase"				android:layout_width="wrap_content"				android:layout_height="wrap_content"				>				<View android:id="@+id/background"					android:background="@drawable/background_shape"					 android:layout_marginStart="0dp"					android:layout_marginTop="0dp"					android:layout_width="1283dp"					android:layout_height="800dp" />				<RelativeLayout					android:layout_width="match_parent"					android:layout_height="wrap_content"					android:padding="30dp">					<RelativeLayout android:id="@+id/phase_"						android:layout_marginTop="151dp"						android:layout_marginStart="0dp"						android:layout_width="wrap_content"						android:layout_height="wrap_content"						>						<TextView android:id="@+id/phase__1"							android:fontFamily="OpenSans-SemiBold"							android:layout_gravity="center_horizontal|center"							android:gravity="center"							android:textSize="33sp"							android:textColor="@color/phase__1_color"							android:layout_marginStart="0dp"							android:layout_marginTop="4dp"							android:layout_width="117dp"							android:layout_height="42dp"							android:text="@string/phase__1_string"							/>						<RelativeLayout android:id="@+id/circle"							android:background="@drawable/circle_shape"							android:layout_marginStart="118dp"							android:layout_marginTop="5dp"							android:layout_width="42dp"							android:layout_height="42dp" >							<TextView android:id="@+id/digit"								android:fontFamily="OpenSans-SemiBold"								android:textSize="25sp"								android:textColor="@color/digit_color"								android:layout_centerInParent="true"								android:layout_width="wrap_content"								android:layout_height="wrap_content"								android:text="@string/digit_string"								android:textAlignment="center"								/>						</RelativeLayout>					</RelativeLayout>					<TextView android:id="@+id/implementation_and_evaluation_of_selected_innovated_interventio"						android:layout_toRightOf="@id/phase_"						android:textSize="29sp"						android:textColor="@color/implementation_and_evaluation_of_selected_innovated_interventio_color"						android:layout_marginStart="5dp"						android:layout_marginTop="157dp"						android:layout_width="2728dp"						android:layout_height="175dp"						android:text="@string/implementation_and_evaluation_of_selected_innovated_interventio_string"						/>					<TextView android:id="@+id/years"						android:layout_toRightOf="@id/phase_"						android:textSize="17sp"						android:textColor="@color/implementation_and_evaluation_of_selected_innovated_interventio_color"						android:layout_marginStart="5dp"						android:layout_marginTop="198dp"						android:layout_width="79dp"						android:layout_height="26dp"						android:text="@string/years_string"						/>				</RelativeLayout>				<TextView android:id="@+id/lorem_"					android:fontFamily="OpenSans-Regular"					android:textSize="21sp"					android:textColor="@color/implementation_and_evaluation_of_selected_innovated_interventio_color"					android:layout_marginStart="0dp"					android:layout_marginTop="292dp"					android:layout_width="2755dp"					android:layout_height="204dp"					android:padding="30dp"					android:text="@string/lorem__string"					 />				<RelativeLayout android:id="@+id/top_bar"					android:layout_marginTop="2dp"					android:layout_marginStart="0dp"					android:layout_width="wrap_content"					android:layout_height="wrap_content"					>					<View android:id="@+id/background_"						android:background="@drawable/background__shape"						 android:layout_marginStart="0dp"						android:layout_marginTop="0dp"						android:layout_width="1286dp"						android:layout_height="103dp" />					<TextView android:id="@+id/phase"						android:fontFamily="OpenSans-Bold"						android:textAllCaps="true"						android:textSize="33sp"						android:textColor="@color/phase__1_color"						android:layout_marginStart="558dp"						android:layout_marginTop="34dp"						android:layout_width="119dp"						android:layout_height="43dp"						android:text="Phase" />					<ImageView android:id="@+id/back_icon"						android:src="@drawable/back_icon"						android:contentDescription="@string/ek_img_content"						 android:layout_marginStart="44dp"						android:layout_marginTop="26dp"						android:layout_width="41dp"						android:layout_height="41dp" />				</RelativeLayout>			</RelativeLayout>		</RelativeLayout>	</RelativeLayout></RelativeLayout>